Adding Italy credit

--- a/ABM/ABM_nigeria_update.html
+++ b/ABM/ABM_nigeria_update.html
@@ -25,7 +25,12 @@
 
 <style>
 
-
+#italyCredit {
+text-align: right;
+width: 95%;
+display: inline-block;
+font-weight: bold;
+}
 
 
 
@@ -40,9 +45,10 @@
 <img id="saveLogo" src="images/stc-logo.svg">
 <img class="logo" src="images/rev_uva_logo_color.png">
 <img class="logo" src="images/brunel-logo-blue.png">
+<span id="italyCredit">With support from Save the Children Italy</span>
 
 <h2>Predictive Displacement project</h2>
-
+	
 <h1>Nigeria ABM simulation progress update</h1>
 
 <h3>1. Introduction</h3>
