Brunel funding credit

--- a/ABM/ABM_nigeria_update.html
+++ b/ABM/ABM_nigeria_update.html
@@ -331,7 +331,8 @@ font-weight: bold;
 <p><b>William Low</b> - <a href="mailto:william.low@savethechildren.org">william.low@savethechildren.org</a> – Project Manager</p>
 <p><b>Auke Tas</b> - <a href="mailto:auke.tas@savethechildren.org">auke.tas@savethechildren.org</a> – Data Scientist</p>
 
-<p class="endPara">Key technical expertise provided by University of Brunel: <b>Derek Groen</b>, <b>Alireza Jahani</b>, <b>Diana Suleimenova</b>.</p>
+<p>Key technical expertise provided by University of Brunel: <b>Derek Groen</b>, <b>Alireza Jahani</b>, <b>Diana Suleimenova</b>.</p>
+<p class="endPara">The development work at Brunel has been supported by the SEAVEA ExCALIBUR project (EPSRC grant no.) EP/W007711/1, as well as by the EU Horizon 2020 projects HiDALGO and ITFLOWS projects (grant agreement nos 824115 and 882986).</p>
 
 
 </div>
