Dual direction map update

--- a/ABM/ABM_nigeria_update.html
+++ b/ABM/ABM_nigeria_update.html
@@ -18,8 +18,10 @@
 
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI=" crossorigin=""/>
 <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js" integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
+<script src="files/leaflet.polylineoffset.js"></script>
+<script src="files/leaflet-ant-path.js"></script>
 
-<script src="files/links_v3.js"></script>
+<script src="files/links_v6.js"></script>
 <script src="files/locs_v3.js"></script>
 <link rel="stylesheet" type="text/css" href="files/main_styles.css"  />
 
@@ -134,9 +136,6 @@ font-weight: bold;
 <p>Disaggregated age and sex data is also shown, and graphs provide insight into shifting patterns over the 100 day simulation.</p>
 </div>
 <div id="map" style="width: 1200px; height: 800px;">
-<button id="toggleButton" onclick="toggleSimple()">
-        Toggle simple routes
-</button>
 	  </div>
 	  <span class="caption">Prediction data applied to network map</span>
 	  
