--- a/abm_report_july/860b193510eb3e219fc5938cecfe2331275827cd/index.html
+++ b/abm_report_july/860b193510eb3e219fc5938cecfe2331275827cd/index.html
@@ -256,11 +256,11 @@ margin-left: 8px;
 <div id="disaggContainer"class="figure"></div>
 
 <h4 class="figureTitle">Most significant flows</h4>
-<p class="figureText">This chart describes the flow of displaced people between key locations. Hover over locations or flows to see additional detail on flow over time, and breakdown by age and sex.</p>
+<p class="figureText">This chart describes the flow of displaced people between key locations. Hover over locations or flows to see additional detail on flow over time, and breakdown by age and sex.</p><br> <p class="figureText">Note that locations listed below may not be the final destination for displaced populations. For predictions of the total displaced populations in locations at the end of the 90 day simulation, see the following visualisation.</p>
 <div id="sankeyContainer" class="figure"></div>
 
 <h4 class="figureTitle">Flows by route</h4>
-<p class="figureText">This map shows which land routes between key settlements will see use by displaced populations on the move. Routes have been simplified to direct connections.</p>
+<p class="figureText">This map shows which land routes between key settlements will see use by displaced populations on the move, and the final predicted totals for each location. Routes have been simplified to direct connections.</p>
 <p class="figureText"></p>
 <div id="map" class="figure">
 	  </div>
@@ -271,11 +271,11 @@ margin-left: 8px;
 
 <p>Conflict events are sourced from <a href="https://acleddata.com/data-export-tool/">ACLED data</a>. SC Nigeria Early Warning System data will be used when available.</p>
 
-<p>Model performance is measured by running large scale simulations of past conflicts and verifying predictions against IOM DTM data. The current model has a 16% error rate.</p>
+<p>Model performance is measured by running large scale simulations of past conflicts and verifying predictions against IOM DTM data. The current model has an average error rate of 16%.</p>
 
 <h3>Notes on use</h3>
 
-<p>These results should be used to assess likely future trends in displacement patterns. Figures should not be treated as exact outcomes, and should always be used in concert with other situation assessment and decision-making processes.</p>
+<p>These results should be used to assess likely future trends in displacement patterns. Figures should not be treated as exact outcomes, and should always be used in combination with other situation assessment and decision-making processes.</p>
 
 <h3>Contact</h3>
 
